--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Restaurant App ver0.3.1
+spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant
+spring.datasource.username=postgres
+spring.datasource.password=mypassword
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
